Handle mobile view height issue. Add truncat on repo list name.

--- a/src/styles/helper.css
+++ b/src/styles/helper.css
@@ -93,6 +93,7 @@
 }
 
 .text-overflow-ellipsis {
+    width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
